// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`inference: pi/arrow > arrow type: Num -> Num 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
    ],
    "term": "Π(t1: Num) -> Num",
    "type": "Type",
  },
}
`;

exports[`inference: pi/arrow > arrow type: Num -> Num 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {},
    "term": {
      "binding": {
        "annotation": {
          "type": "Var",
          "variable": {
            "name": "Num",
            "type": "Free",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "t1",
      },
      "body": {
        "type": "Var",
        "variable": {
          "name": "Num",
          "type": "Free",
        },
      },
      "type": "Abs",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: pi/arrow > output type must be a Type: (x: Num) -> x 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Num ~~ Type",
    ],
    "term": "Π(x: Num) -> x",
    "type": "Type",
  },
}
`;

exports[`inference: pi/arrow > output type must be a Type: (x: Num) -> x 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Num",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {},
    "term": {
      "binding": {
        "annotation": {
          "type": "Var",
          "variable": {
            "name": "Num",
            "type": "Free",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "x",
      },
      "body": {
        "type": "Var",
        "variable": {
          "index": 0,
          "type": "Bound",
        },
      },
      "type": "Abs",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: pi/arrow > pi explicit: (x: Num) -> Num 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
    ],
    "term": "Π(x: Num) -> Num",
    "type": "Type",
  },
}
`;

exports[`inference: pi/arrow > pi explicit: (x: Num) -> Num 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {},
    "term": {
      "binding": {
        "annotation": {
          "type": "Var",
          "variable": {
            "name": "Num",
            "type": "Free",
          },
        },
        "icit": "Explicit",
        "type": "Pi",
        "variable": "x",
      },
      "body": {
        "type": "Var",
        "variable": {
          "name": "Num",
          "type": "Free",
        },
      },
      "type": "Abs",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "typedTerms": {},
  },
}
`;

exports[`inference: pi/arrow > pi implicit: (x: Num) => Num 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ Type",
    ],
    "term": "Π(x: Num) => Num",
    "type": "Type",
  },
}
`;

exports[`inference: pi/arrow > pi implicit: (x: Num) => Num 2`] = `
{
  "structure": {
    "constraints": [
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 0,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
      {
        "left": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "lvl": 1,
        "right": {
          "type": "Lit",
          "value": {
            "type": "Atom",
            "value": "Type",
          },
        },
        "type": "assign",
      },
    ],
    "metas": {},
    "term": {
      "binding": {
        "annotation": {
          "type": "Var",
          "variable": {
            "name": "Num",
            "type": "Free",
          },
        },
        "icit": "Implicit",
        "type": "Pi",
        "variable": "x",
      },
      "body": {
        "type": "Var",
        "variable": {
          "name": "Num",
          "type": "Free",
        },
      },
      "type": "Abs",
    },
    "type": {
      "type": "Lit",
      "value": {
        "type": "Atom",
        "value": "Type",
      },
    },
    "typedTerms": {},
  },
}
`;
